fix(link): focus box on safari

--- a/packages-new/components/link/src/components/osds-link/osds-link.scss
+++ b/packages-new/components/link/src/components/osds-link/osds-link.scss
@@ -8,6 +8,8 @@
 // CSS for the component but not for theming
 
 :host {
+  display: inline-flex;
+
   @include osds-link-on-link-container() {
     cursor: pointer;
     text-decoration: none;
