--- a/packages-new/components/link/src/components/osds-link/styles/osds-link.size.scss
+++ b/packages-new/components/link/src/components/osds-link/styles/osds-link.size.scss
@@ -7,9 +7,5 @@
       display: inline-flex;
       align-items: baseline;
     }
-
-    @include osds-link-on-selected-host() {
-      display: inline-flex;
-    }
   }
 }
